GOVSI-440 - Add Client Registry object and switch ClientService to use it
- Create a ClientRegistry object with the Dynamo annotations so it can be used to add Client information to DynamoDB.
- Switch the ClientService interface to use the ClientRegistry object
- Remove the ClientSecret as clients will be using the PrivateKeyJWT to authenticate
- Remove the getSuccessfulResponse from the ClientService as it is never used